second push to confirm all new code has been commited

--- a/notebooks/iris_model.ipynb
+++ b/notebooks/iris_model.ipynb
@@ -190,7 +190,13 @@
    "id": "fc99dc40-3147-4ae1-af59-30b956139595",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#Imports\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "import numpy and np\n",
+    "\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
