--- a/notebooks/iris_model.ipynb
+++ b/notebooks/iris_model.ipynb
@@ -186,17 +186,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "fc99dc40-3147-4ae1-af59-30b956139595",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "X_train: (120, 4) y_train: (120,)\n",
+      "X_test:  (30, 4) y_test:  (30,)\n",
+      "train class counts: [40 40 40]\n",
+      "test  class counts: [10 10 10]\n"
+     ]
+    }
+   ],
    "source": [
     "#Imports\n",
     "from sklearn.model_selection import train_test_split\n",
-    "import numpy and np\n",
+    "import numpy as np\n",
     "\n",
-    "\n"
+    "X_train, X_test, y_train, y_test = train_test_split(\n",
+    "    X, y,\n",
+    "    test_size=0.20,       # 20 % goes to test (30 flowers)\n",
+    "    random_state=42,      # random seed; same shuffle each run\n",
+    "    stratify=y \n",
+    "    # stratify ensures each species stays balanced in\n",
+    "    #both sets even after splitting so there is not bia\n",
+    ")\n",
+    "\n",
+    "print(\"X_train:\", X_train.shape, \"y_train:\", y_train.shape)\n",
+    "print(\"X_test: \", X_test.shape,  \"y_test: \", y_test.shape)\n",
+    "print(\"train class counts:\", np.bincount(y_train))\n",
+    "print(\"test  class counts:\", np.bincount(y_test))\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f6bbe76a-5879-44be-a445-1616f6e9941b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "50696d94-16a9-4760-9649-87e4f2bff690",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
