pushing any minor changes to iris_model.ipynb

--- a/notebooks/iris_model.ipynb
+++ b/notebooks/iris_model.ipynb
@@ -212,7 +212,7 @@
     "    random_state=42,      # random seed; same shuffle each run\n",
     "    stratify=y \n",
     "    # stratify ensures each species stays balanced in\n",
-    "    #both sets even after splitting so there is not bia\n",
+    "    #both sets even after splitting so there is not bias between different species\n",
     ")\n",
     "\n",
     "print(\"X_train:\", X_train.shape, \"y_train:\", y_train.shape)\n",
@@ -222,20 +222,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f6bbe76a-5879-44be-a445-1616f6e9941b",
+   "cell_type": "markdown",
+   "id": "e71330f5-77f2-4fa4-96aa-1e60e1360739",
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "50696d94-16a9-4760-9649-87e4f2bff690",
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Step 3 - Training using Decision Tree Classifier"
+   ]
   }
  ],
  "metadata": {
