added code to train the model using a Decision Tree Classifier

--- a/notebooks/iris_model.ipynb
+++ b/notebooks/iris_model.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "id": "87043851-a72a-4eee-96f4-9b35527cd1de",
    "metadata": {},
    "outputs": [
@@ -152,10 +152,7 @@
     "#Output check\n",
     "print(\"shape:\", df.shape)\n",
     "display(df.head())\n",
-    "print(\"species counts:\\n\", df[\"species\"].value_counts())\n",
-    "\n",
-    "\n",
-    "\n"
+    "print(\"species counts:\\n\", df[\"species\"].value_counts())"
    ]
   },
   {
@@ -186,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "id": "fc99dc40-3147-4ae1-af59-30b956139595",
    "metadata": {},
    "outputs": [
@@ -218,7 +215,7 @@
     "print(\"X_train:\", X_train.shape, \"y_train:\", y_train.shape)\n",
     "print(\"X_test: \", X_test.shape,  \"y_test: \", y_test.shape)\n",
     "print(\"train class counts:\", np.bincount(y_train))\n",
-    "print(\"test  class counts:\", np.bincount(y_test))\n"
+    "print(\"test  class counts:\", np.bincount(y_test))"
    ]
   },
   {
@@ -226,8 +223,53 @@
    "id": "e71330f5-77f2-4fa4-96aa-1e60e1360739",
    "metadata": {},
    "source": [
-    "## Step 3 - Training using Decision Tree Classifier"
+    "## Step 3 - Training using Decision Tree Classifier\n",
+    "\n",
+    "\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4fa7699e-07bb-4270-a663-73c0e74a4d5d",
+   "metadata": {},
+   "source": [
+    "- This is where we are actually teaching the model from the training data\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "b7691a71-77cf-46d0-aea2-88f99b51b0a8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model trained!\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.tree import DecisionTreeClassifier\n",
+    "# initialize the model with scikit-learn package\n",
+    "#random_state is used to ensure simiral results/splits every run \n",
+    "\n",
+    "model = DecisionTreeClassifier(random_state = 42)\n",
+    "#.fit() to train the model on the training data \n",
+    "# X_train=all the training flowers & y_train=all their correct species\n",
+    "model.fit(X_train, y_train)\n",
+    "\n",
+    "print('Model trained!')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bdc9e291-4a2a-40a8-9c02-71c49ef5cb29",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
