--- a/notebooks/iris_model.ipynb
+++ b/notebooks/iris_model.ipynb
@@ -394,9 +394,92 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "6c4627ae-c805-448f-9bbb-95c063cd3ca3",
+   "metadata": {},
+   "source": [
+    "# Step 6 — Iterate & compare models"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "id": "e28e048b-d7c2-40ba-a590-66ccf0aad17e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "max_depth=2      test_acc=0.933\n",
+      "max_depth=3      test_acc=0.967\n",
+      "max_depth=4      test_acc=0.933\n",
+      "max_depth=5      test_acc=0.933\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.tree import DecisionTreeClassifier\n",
+    "\n",
+    "#Testing depth with decision tree.\n",
+    "depths = [2, 3, 4, 5]\n",
+    "for d in depths:\n",
+    "    m = DecisionTreeClassifier(max_depth=d, random_state=42)\n",
+    "    m.fit(X_train, y_train)\n",
+    "    print(f\"max_depth={d:<5}  test_acc={m.score(X_test, y_test):.3f}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "id": "e907dbd7-25dd-4da5-8c0d-e4f775a9043c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "k-NN accuracy: 1.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Tested model with k-Nearest Neighbors (k-NN) algorithm\n",
+    "from sklearn.neighbors import KNeighborsClassifier\n",
+    "\n",
+    "model2 = KNeighborsClassifier(n_neighbors=5)\n",
+    "model2.fit(X_train, y_train)\n",
+    "y_pred2 = model2.predict(X_test)\n",
+    "print(\"k-NN accuracy:\", accuracy_score(y_test, y_pred2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "id": "c4724e1b-ac8e-41b7-a868-c861adee0772",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "SVM accuracy: 1.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Tested model with Support Vector Machine (SVM) algorithm\n",
+    "from sklearn.svm import SVC\n",
+    "\n",
+    "model3 = SVC(C=2, kernel=\"rbf\", gamma=\"scale\", random_state=42)\n",
+    "model3.fit(X_train, y_train)\n",
+    "print(\"SVM accuracy:\", accuracy_score(y_test, y_pred2))"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1cf97d49-de79-4d41-87ad-68f425f59ae5",
+   "id": "5edcf248-9fd3-43c2-9168-94823c86b5f1",
    "metadata": {},
    "outputs": [],
    "source": []
