added markdown of learnings and readme text

--- a/notebooks/iris_model.ipynb
+++ b/notebooks/iris_model.ipynb
@@ -477,9 +477,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "cc639b47-8e41-457a-9273-31cb07f96a88",
+   "metadata": {},
+   "source": [
+    "- The Decision Tree Algorithm with a depth of 3 yields the best result of 0.967 accuracy with the iris dataset.\n",
+    "- Both k-NN and SVC return a 100% success with the dataset.\n",
+    "- The Decision Tree however is alot easier to inteprit compared to the k_NN and SVM algorithms and is therefore  at the learning stage easier to work with and understand how decisions are made logically in while testing and training."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5edcf248-9fd3-43c2-9168-94823c86b5f1",
+   "id": "a8851f98-ee4a-4c82-8767-2bb897462297",
    "metadata": {},
    "outputs": [],
    "source": []
