minor edits to markdown in iris-model and added code to train.py

--- a/notebooks/iris_model.ipynb
+++ b/notebooks/iris_model.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 91,
    "id": "87043851-a72a-4eee-96f4-9b35527cd1de",
    "metadata": {},
    "outputs": [
@@ -374,11 +374,11 @@
     "import matplotlib.pyplot as plt\n",
     "import pandas as pd\n",
     "\n",
-    "#viewing the most important features usiend in the decision tree\n",
+    "#Viewing the most important features used in the decision tree\n",
     "imp = pd.Series(model.feature_importances_, index=iris.feature_names).sort_values(ascending=False)\n",
     "print(imp)\n",
     "\n",
-    "#creating a tree structure to visualise the decisions\n",
+    "#Creating a tree structure to visualise the decisions\n",
     "plt.figure(figsize=(6,6))\n",
     "plot_tree(\n",
     "    model,\n",
